// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookForm renders  component 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Total pages"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder=""
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Authors/Designers name",
        }
      }
      title="Authors"
    >
      <Field
        component={[Function]}
        disabled={false}
        isNtro={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add author",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "authors-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each author's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Author's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "lockedTooltip": "You are not able to edit this row",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this author ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed author",
                "unselectedHint": "Select this to confirm [identifier] is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Editors"
    >
      <Field
        component={[Function]}
        disabled={false}
        id="editors-name-as-published-field"
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add editor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format "John Smith".
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "editors-name-as-published-field",
                "nameAsPublishedHint": "Type the name in the format eg. \\"John Smith\\"",
                "nameAsPublishedLabel": "Enter each editor's name as published (eg. John Smith)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name (if applicable)",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Editor's name in the format eg. \\"John Smith\\"",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this editor ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed editor",
                "unselectedHint": "Select this to confirm this editor is you",
              },
            },
          }
        }
        name="editors"
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`BookForm renders  component should render contributor assignment 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Total pages"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder=""
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`BookForm renders  component should render non ntro book 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Total pages"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder=""
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Authors/Designers name",
        }
      }
      title="Authors"
    >
      <Field
        component={[Function]}
        disabled={false}
        isNtro={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add author",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "authors-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each author's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Author's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "lockedTooltip": "You are not able to edit this row",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this author ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed author",
                "unselectedHint": "Select this to confirm [identifier] is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Editors"
    >
      <Field
        component={[Function]}
        disabled={false}
        id="editors-name-as-published-field"
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add editor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format "John Smith".
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "editors-name-as-published-field",
                "nameAsPublishedHint": "Type the name in the format eg. \\"John Smith\\"",
                "nameAsPublishedLabel": "Enter each editor's name as published (eg. John Smith)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name (if applicable)",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Editor's name in the format eg. \\"John Smith\\"",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this editor ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed editor",
                "unselectedHint": "Select this to confirm this editor is you",
              },
            },
          }
        }
        name="editors"
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`BookForm renders  component with 4 input fields for NTRO 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={false}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Authors/Designers name",
        }
      }
      title="Authors"
    >
      <Field
        component={[Function]}
        disabled={false}
        isNtro={true}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add author",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "authors-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each author's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Author's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "lockedTooltip": "You are not able to edit this row",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this author ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed author",
                "unselectedHint": "Select this to confirm [identifier] is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Editors"
    >
      <Field
        component={[Function]}
        disabled={false}
        id="editors-name-as-published-field"
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add editor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format "John Smith".
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "editors-name-as-published-field",
                "nameAsPublishedHint": "Type the name in the format eg. \\"John Smith\\"",
                "nameAsPublishedLabel": "Enter each editor's name as published (eg. John Smith)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name (if applicable)",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Editor's name in the format eg. \\"John Smith\\"",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this editor ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed editor",
                "unselectedHint": "Select this to confirm this editor is you",
              },
            },
          }
        }
        name="editors"
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <NtroFields
    disableDeleteAllGrants={false}
    hideAbstract={false}
    hideAudienceSize={true}
    hideEndPage={true}
    hideExtent={false}
    hideGrants={false}
    hideIsmn={true}
    hideIsrc={true}
    hideIssue={true}
    hideLanguage={false}
    hideOriginalFormat={true}
    hidePeerReviewActivity={false}
    hideSeries={true}
    hideStartPage={true}
    hideVolume={true}
    locale={
      Object {
        "contributionStatement": Object {
          "fields": Object {
            "impactStatement": Object {
              "label": <span>
                Creator research statement*. Include Background, Contribution and Significance
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>,
              "placeholder": "Remember to include substantiation of your major or minor scale/significance claim above.",
            },
            "scaleOfWork": Object {
              "description": "Select the option that best describes the significance of the work.",
              "label": <span>
                Scale/Significance of work*
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>,
            },
          },
          "help": Object {
            "buttonLabel": "CLOSE",
            "text": <React.Fragment>
              <h3>
                Creator research statement
              </h3>
              <p>
                For more information about the research statement, click
                <b>
                  <a
                    href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                    style={
                      Object {
                        "fontWeight": 700,
                      }
                    }
                    target="_blank"
                  >
                    here
                  </a>
                </b>
              </p>
            </React.Fragment>,
            "title": "Author/Creator research statement",
          },
          "title": "Author/Creator research statement",
        },
        "grantEditor": Object {
          "title": "Grant details",
        },
        "metadata": Object {
          "fields": Object {
            "abstract": Object {
              "label": <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>,
              "placeholder": "Enter a brief description of the work",
            },
            "audienceSize": Object {
              "label": "Audience size",
            },
            "endPage": Object {
              "label": "End page",
            },
            "extent": Object {
              "label": "Total pages/Extent",
              "placeholder": "Enter total pages, size or duration of work",
            },
            "issue": Object {
              "label": "Issue",
            },
            "language": Object {
              "label": "Language",
            },
            "notes": Object {
              "label": "Notes",
            },
            "peerReviewActivity": Object {
              "label": "Quality indicators",
            },
            "physicalDescription": Object {
              "label": "Physical description",
              "placeholder": "Building, Exhibition, Performance, Composition",
            },
            "series": Object {
              "floatingLabelText": "Series",
              "hintText": "Enter the name of publication, performance, recording, or event series",
            },
            "startPage": Object {
              "label": "Start page",
            },
            "volume": Object {
              "label": "Volume",
            },
          },
          "title": "NTRO data",
        },
      }
    }
    showContributionStatement={false}
    showSignificance={false}
    submitting={false}
  />
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`BookForm renders  should hide author when is edited book 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Total pages"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder=""
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Editors"
    >
      <Field
        component={[Function]}
        disabled={false}
        id="editors-name-as-published-field"
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add editor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format "John Smith".
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "editors-name-as-published-field",
                "nameAsPublishedHint": "Type the name in the format eg. \\"John Smith\\"",
                "nameAsPublishedLabel": "Enter each editor's name as published (eg. John Smith)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name (if applicable)",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Editor's name in the format eg. \\"John Smith\\"",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this editor ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed editor",
                "unselectedHint": "Select this to confirm this editor is you",
              },
            },
          }
        }
        name="editors"
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`BookForm renders  should show author when is not edited book 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Book information"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-title"
            label="Book title"
            multiline={true}
            name="rek_title"
            required={true}
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-place-of-publication"
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-publisher"
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Total pages"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder=""
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="DOI"
            name="fez_record_search_key_doi.rek_doi"
            placeholder="Enter a valid DOI (eg. 10.4324/9780203118214)"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Date published"
            floatingTitleRequired={true}
            name="rek_date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Authors/Designers name",
        }
      }
      title="Authors"
    >
      <Field
        component={[Function]}
        disabled={false}
        isNtro={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add author",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of authors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "authors-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each author's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Author's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "lockedTooltip": "You are not able to edit this row",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this author ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed author",
                "unselectedHint": "Select this to confirm [identifier] is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Editors"
    >
      <Field
        component={[Function]}
        disabled={false}
        id="editors-name-as-published-field"
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add editor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                  - Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format "John Smith".
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of editors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "editors-name-as-published-field",
                "nameAsPublishedHint": "Type the name in the format eg. \\"John Smith\\"",
                "nameAsPublishedLabel": "Enter each editor's name as published (eg. John Smith)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name (if applicable)",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Editor's name in the format eg. \\"John Smith\\"",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteButtonId": [Function],
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this editor ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed editor",
                "unselectedHint": "Select this to confirm this editor is you",
              },
            },
          }
        }
        name="editors"
        showContributorAssignment={true}
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISBN"
    >
      <WithStyles(Typography)>
        You can add up to five ISBN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISBN",
                "inputFieldHint": "Enter ISBN, e.g. 13 digit: 9780815375296 or 10 digit: 1861972717",
                "inputFieldLabel": "ISBN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISBN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_isbn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_isbn_order",
            "value": "rek_isbn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="ISSN"
    >
      <WithStyles(Typography)>
        You can add up to five ISSN values
      </WithStyles(Typography)>
      <Field
        component={[Function]}
        disabled={false}
        isValid={[Function]}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add ISSN",
                "inputFieldHint": "Enter ISSN, e.g. 1838-9414",
                "inputFieldLabel": "ISSN value",
                "remindToAdd": <span>
                  Please press 
                  <b>
                    ENTER
                  </b>
                   or click 
                  <b>
                    ADD
                  </b>
                   button to add this value to the list
                </span>,
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "ISSN",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
              },
            },
          }
        }
        maxCount={5}
        name="fez_record_search_key_issn"
        remindToAdd={true}
        searchKey={
          Object {
            "order": "rek_issn_order",
            "value": "rek_issn",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional details"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Link (URL)"
            name="rek_link"
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
